# leveldbext

./: .gitignore  CMakeLists.txt  LICENSE  README.md
db_connector/: leveldb_connector.cc  leveldb_connector_test.cc
doc/: dev.md
include/db_connector/: connector.h
include/spatial/: trajdb.h
spatial/: trajdb_impl.cc  trajdb_test.cc
util/: encoding.h
